--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,9 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+@layer utilities {
+  .heading {
+    @apply font-bold text-4xl md:text-5xl text-center;
+  }
+}
